Update run.sh